

# OpenGL dependies headers.
#INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include/)

FIND_PACKAGE(GTest REQUIRED)
IF(GTEST_FOUND)
	MESSAGE(STATUS "Gtest found: ${GTEST_BOTH_LIBRARIES}")
ELSE()

ENDIF()

# Source files.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)

ADD_EXECUTABLE(fragview-assert ${SOURCE_FILES} ${HEADER_FILES} src/DataStructure.cpp)
TARGET_LINK_LIBRARIES(fragview-assert ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} fragview-core pthread )
TARGET_INCLUDE_DIRECTORIES(fragview-assert PRIVATE ${GTEST_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include/ ${FRAG_CORE_INCLUDE})
INSTALL(TARGETS fragview-assert DESTINATION bin)

ADD_TEST(NAME assert-functionality
		COMMAND fragview-assert
		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})