FILE(GLOB ENGINE_APP_SAMPLE_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_EXECUTABLE(fragengine-example-app ${ENGINE_APP_SAMPLE_SOURCE_FILES} )
TARGET_LINK_LIBRARIES(fragengine-example-app PUBLIC fragengine)
TARGET_INCLUDE_DIRECTORIES(fragengine-example-app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )
