
ADD_DEFINITIONS(-DCL_TARGET_OPENCL_VERSION=120)

FIND_PACKAGE(OpenCL REQUIRED)
IF(OpenCL_FOUND)
	MESSAGE(STATUS "OpenCL: ${OpenCL_LIBRARY}")
ENDIF()

# Source files.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

#
ADD_LIBRARY(fragview-rcl  ${SOURCE_FILES} )
TARGET_LINK_LIBRARIES(fragview-rcl ${OpenCL_LIBRARIES} fragview-core)
TARGET_INCLUDE_DIRECTORIES(fragview-rcl PRIVATE ${OpenCL_INCLUDE_DIRS})
ADD_DEPENDENCIES(fragview-rcl fragview-core)
INSTALL(TARGETS fragview-rcl DESTINATION lib)