
# GCC compiler flag options.
if ((CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX) AND NOT CMAKE_COMPILER_IS_MINGW)

endif ()

SET(OpenGL_GL_PREFERENCE "GLVND")
INCLUDE(FindOpenGL)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

# OpenGL dependies headers.
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})

# Source files.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_LIBRARY(fragview-rgl SHARED  ${SOURCE_FILES} )
TARGET_LINK_LIBRARIES(fragview-rgl  ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} )
INSTALL(TARGETS fragview-rgl DESTINATION lib)