
# GCC compiler flag options.
IF ((CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX) AND NOT CMAKE_COMPILER_IS_MINGW)

ENDIF ()

FIND_PACKAGE(OpenAL)

# OpenGL dependies headers.
INCLUDE_DIRECTORIES(${ALUT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})

# Source files.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_LIBRARY(fragview-aal ${SOURCE_FILES} )
TARGET_LINK_LIBRARIES(fragview-aal  ${OPENAL_LIBRARY} ${ALUT_LIBRARY} fragview-core)
ADD_DEPENDENCIES(fragview-aal fragview-core)
INSTALL(TARGETS fragview-aal DESTINATION lib)
