
# GCC compiler flag options.
IF ((CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX) AND NOT CMAKE_COMPILER_IS_MINGW)

ENDIF ()

FIND_PACkAGE(Bullet)
INCLUDE(FindBullet)
SET(BULLET_LIB "-lBulletDynamics -lBulletCollision -lLinearMath -lBulletSoftBody")

# Source files.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_LIBRARY(fragview-pbu ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(fragview-pbu ${BULLET_LIB} fragcore )
ADD_DEPENDENCIES(fragview-pbu fragcore)
INSTALL(TARGETS fragview-pbu DESTINATION lib)

IF ((CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang") )
    TARGET_INCLUDE_DIRECTORIES( fragview-pbu PUBLIC "${BULLET_INCLUDE_DIRS}" )
ENDIF()