
# GCC compiler flag options.
IF ((CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX) AND NOT CMAKE_COMPILER_IS_MINGW)

ENDIF ()

# Source files.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_LIBRARY(pvphysxphysic ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(pvphysxphysic  PVEngine )
INSTALL(TARGETS pvphysxphysic DESTINATION lib)
