
# GCC compiler flag options.
IF ((CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX) AND NOT CMAKE_COMPILER_IS_MINGW)

ENDIF ()

# Source files.
#TODO add physx library targets.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
SET(PHYSX_INCLUDE_DIRS "")

ADD_LIBRARY(fragview-ppx ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(fragview-ppx fragcore )
ADD_DEPENDENCIES(fragview-pbu fragcore)
INSTALL(TARGETS fragview-ppx DESTINATION lib)
TARGET_INCLUDE_DIRECTORIES( fragview-ppx PUBLIC "${PHYSX_INCLUDE_DIRS}" )