
#ADD_DEFINITIONS(-DCL_TARGET_OPENCL_VERSION=120)
FIND_PACKAGE(OpenCL)
IF(OpenCL_FOUND)
	MESSAGE(STATUS "OpenCL: ${OpenCL_LIBRARY}")
ENDIF()

# Source files.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

#
ADD_LIBRARY(fragview-rcl  ${SOURCE_FILES} )
TARGET_LINK_LIBRARIES(fragview-rcl ${OpenCL_LIBRARIES} fragcore)
TARGET_INCLUDE_DIRECTORIES(fragview-rcl PRIVATE ${OpenCL_INCLUDE_DIRS})
SET_TARGET_PROPERTIES(fragview-rcl PROPERTIES COMPILE_FLAGS "-DCL_TARGET_OPENCL_VERSION=120")
ADD_DEPENDENCIES(fragview-rcl fragcore)
INSTALL(TARGETS fragview-rcl DESTINATION lib)