SET(OpenGL_GL_PREFERENCE "GLVND")
INCLUDE(FindOpenGL)
FIND_PACKAGE(OpenGL)
FIND_PACKAGE(GLEW)

FIND_PACKAGE(PkgConfig)
IF(PKG_CONFIG_FOUND)
    PKG_CHECK_MODULES(FRAGVIEWCORE gtk+-3.0)
ENDIF()

IF(GLEW_FOUND)
    MESSAGE(STATUS "Glew found: ${GLEW_LIBRARIES}.")
ENDIF()

IF(OPENGL_FOUND)
    MESSAGE(STATUS "OpenGL found: ${OPENGL_LIBRARIES}.")
ENDIF()

# Source files.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_LIBRARY(fragview-rgl SHARED  ${SOURCE_FILES} )
TARGET_LINK_LIBRARIES(fragview-rgl ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} fragcore)
# OpenGL dependies headers.
TARGET_INCLUDE_DIRECTORIES(fragview-rgl PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
ADD_DEPENDENCIES(fragview-rgl fragcore)
INSTALL(TARGETS fragview-rgl DESTINATION lib)